# 16xbrain_tools_26A

./: .gitignore  README.md  package-lock.json  package.json
16x-RAG-Explorer/: README.md  index.html  package-lock.json  package.json  vite.config.js
16x-RAG-Explorer/electron/: main.cjs  preload.cjs
16x-RAG-Explorer/site/: rag-explorer.html
16x-RAG-Explorer/src/: App.jsx  sampleDocs.js  store.js  styles.css
16x-RAG-Explorer/tests/: engine.test.mjs
16x-Swarm/: README.md  index.html  package.json
16x-Swarm/electron/: main.cjs  preload.cjs
16xCodeGraph/: .gitignore  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
16xDataFlux/: README.md  index.html  package.json  vite.config.js
16xForgeDB/: .gitignore  ARCHITECTURE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
16xForgeDB/src-tauri/: Cargo.toml  tauri.conf.json
16xForgeDB/src-tauri/capabilities/: default.json
16xForgeDB/src-tauri/src/: lib.rs  main.rs  seed.rs
16xGateway/: .gitignore  BLUEPRINT.md  README.md  ecosystem.config.cjs  gateway.config.json  package.json  tsconfig.json
16xMediaDigest/: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
16xMediaDigest/src-tauri/: Cargo.toml  tauri.conf.json
16xMediaDigest/src-tauri/capabilities/: default.json
16xMediaDigest/src-tauri/icons/: icon.icns
16xMediaDigest/src-tauri/src/: audio.rs  lib.rs  main.rs  transcribe.rs
16xSelfHeal/: README.md  package-lock.json  package.json
16xShemaMind/: README.md  package.json  vite.config.js
(+170 files in other folders)
