[package]
name = "forgedb"
version = "0.1.0"
description = "ForgeDB — offline relational mock data seeder for SQLite"
authors = ["16xBrains"]
edition = "2021"

[lib]
name = "forgedb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# "bundled" compiles SQLite into the binary: fully offline, no system sqlite
# required on either macOS or Windows.
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
