[package]
name = "media-digest"
version = "0.1.0"
description = "16x Media Digest — bilingual local media-to-Markdown digest pipeline"
authors = ["16xBrains"]
edition = "2021"

[lib]
name = "media_digest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "rt", "macros"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
